package actionPattern.InterpreterPattern.ruleEngine;

public interface Node {
    Boolean interpret();
}
